# Bretema

./: .clang-format  .gitignore  .gitmodules  BuildInfo.in  CMakeLists.txt  README.md  build.py  imgui.ini
.cache/clangd/index/: ImGuiDemo.cpp.ECA7D5F64B41DD69.idx  VkBootstrap.cpp.C64DC35B27DADF38.idx  VkBootstrap.h.3C7F098A19F6008B.idx  VkBootstrapDispatch.h.262716EA909199B0.idx  _fixes.hpp.CE6D8EA2F1940542.idx  _swizzle.hpp.1A64718FF6B81AAF.idx  _vectorize.hpp.D3FD778700EA09D5.idx  btm_app.cpp.E85F7CE82DFBD901.idx  btm_app.hpp.D71AA1770A48D059.idx  btm_base.hpp.3785A5ADDE314A39.idx  btm_renderer.cpp.33E17A65C2D06504.idx  btm_renderer.hpp.09E9FBD3CD0C35BC.idx  btm_tools.hpp.65CDE8C756C3E67D.idx  btm_window.cpp.E92599EF84ABAFFF.idx  btm_window.hpp.4F59705374839FE5.idx  common.hpp.FDC947ED8D184E52.idx  compatibility.hpp.DC746A1FFA2A4206.idx  compatibility.inl.B42A1013C0F0EC19.idx  component_wise.hpp.0A66EDC5FE4CEBC6.idx  component_wise.inl.2E2E4E62314F1CC3.idx  compute_common.hpp.7CAFF6E81B3291D3.idx  compute_vector_relational.hpp.8A069BEFFC368C2C.idx  constants.hpp.EC1D2CC3620DC51F.idx  constants.inl.86DD651624403A8F.idx  context.c.E089CE24B49E39D3.idx  core.h.BA663F2DF04F0C33.idx  dual_quaternion.hpp.3C25FF3A9C8812BE.idx  dual_quaternion.inl.3944BC26B36EDAD7.idx  egl_context.c.97E8AF6D0F548DB9.idx  egl_context.h.44E5EB9BC7AD054F.idx  epsilon.hpp.D90EACB0BC1E9BAE.idx  epsilon.inl.E045841BD029146E.idx  euler_angles.hpp.D3ACEBD16EC37A8A.idx  euler_angles.inl.A62B909314239931.idx  exponential.hpp.8F14B7D48A2A0E9D.idx  format-inl.h.CFE34BBBA86B26DB.idx  format.cc.BB6459DB6290D1B8.idx  format.h.787853A3AEFA8034.idx  func_common.inl.EF164DC369263AB6.idx  func_exponential.inl.A29596698C22BB94.idx  (+236 more)
Assets/Geometry/: cube2.glb  default_scene_A.gltf  default_scene_B.gltf  default_scene_C.glb  suzanne.glb  suzanne_donut.glb
Assets/Shaders/: base.vert  mesh.frag  mesh.vert  tri.frag  tri.vert
Bretema/: Base.hpp  Window.cpp  Window.hpp  btm_app.cpp  btm_app.hpp  btm_base.hpp  btm_camera.hpp  btm_renderer.cpp  btm_renderer.hpp  btm_tools.hpp  btm_transform.hpp  btm_userInput.hpp  btm_utils.hpp  btm_window.cpp  btm_window.hpp
Bretema/Core/: Logging.hpp  Macros.hpp  Math.hpp  Std.hpp
Bretema/Vk/: vk_base.cpp  vk_base.hpp  vk_engine.cpp  vk_engine.hpp  vk_init.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_str.hpp  vk_types.hpp
Bretema/Vulkan/: Base.hpp  Initializers.hpp  Manager.cpp  Manager.hpp  ToStr.hpp
Bretema/bm/: app.cpp  app.hpp  base.cpp  base.hpp  camera.hpp  renderer.cpp  renderer.hpp  transform.hpp  userInput.hpp  utils.hpp  window.cpp  window.hpp
Bretema/vk/: base.cpp  base.hpp  init.hpp  renderer.cpp  renderer.hpp  str.hpp  types.hpp
Clients/Windows/: client.rc
Modules/: argparse.hpp  sole.hpp  span.hpp
Modules/ImGui/: imgui_impl_glfw.cpp  imgui_widgets.cpp
Tests/: BasicDemo.cpp  ImGuiDemo.cpp  main.cpp
